--- a/website/static/styles/styleschat.css
+++ b/website/static/styles/styleschat.css
@@ -136,7 +136,7 @@ h4.card-title {
     background-color: #f5f6f7;
     border-radius: 3px;
     font-weight: 100;
-    color: #9b9b9b
+    color: #000
 }
 
 .media>* {
@@ -251,7 +251,7 @@ h4.card-title {
 
 .publisher-input {
     -webkit-box-flex: 1;
-    flex-grow: 1;
+    flex-grow: 2;
     border: none;
     outline: none !important;
     background-color: transparent
