--- a/website/templates/chats/chatquestion1.html
+++ b/website/templates/chats/chatquestion1.html
@@ -1,25 +1,81 @@
+<!DOCTYPE html>
+<html lang="en">
 
-{% extends "chats/create_post.html" %} {% block title %}GrapeVine - Giving Feedback made easy{% endblock %} 
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://kit.fontawesome.com/999ca2bb93.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>{% block title %}Chat with {{user}}{% endblock %}</title>
+  </head>
+<body>
 
 
+<!-- Core theme CSS (includes Bootstrap)-->
+<link href="{{ url_for('static',filename='styles/styleschat.css') }}" rel="stylesheet" />
+<div class="page-content page-container" id="page-content">
+      <div class="row container d-flex justify-content-center">
+          <div class="col-md-8">
+              <div class="card card-bordered" id="chatbox">
+                  <div class="card-header">
+                      <h4 class="card-title"><strong>Chat with {{user}}</strong></h4>
+                  </div>
 
-{% block Content%}
-<div class="media media-chat media-chat-reverse">
-        <div class="media-body">
-            <p>{{previoustext}}</p>
-            <p>How are you doing?</p>
-            <p>Long time no see! Tomorrow office. will be free on sunday.</p>
-            <p class="meta"><time datetime="2018">00:06</time></p>
-        </div>    
-    </div>
+                  <!-- User 1-->
+                  <div class="ps-container ps-theme-default ps-active-y" id="chat-content" style="overflow-y: scroll !important; height:700px !important;">
+                      <div class="media media-chat media-chat"> <img class="avatar" src="https://img.icons8.com/color/36/000000/administrator-male.png" alt="...">
+                          <div class="media-body">
+                              <p>Hi, there! Thanks for letting us know how you liked our service!</p>
+                              <p>We have one more question <br> THIS IS MY FIRST QUESTION</p>
+                              <p class="meta"><time datetime="2018">23:58</time></p>
+                          </div>
+                      </div>
+                <!-- User 2-->
+                {% block Content%}
+                
+                <div class="ps-scrollbar-x-rail" style="left: 0px; bottom: 0px;">
+                  <div class="ps-scrollbar-x" tabindex="0" style="left: 0px; width: 0px;"></div>
+              </div>
+              <div class="ps-scrollbar-y-rail" style="top: 0px; height: 0px; right: 2px;">
+                  <div class="ps-scrollbar-y" tabindex="0" style="top: 0px; height: 2px;"></div>
+              </div>
+          </div>
+          <div class="publisher bt-1 border-dark justify-between"> 
+            <img class="avatar avatar-xs" src="https://img.icons8.com/color/36/000000/administrator-male.png" alt="..."> 
+            <form method="POST"><input name="text" id="text" class="publisher-input" id="text" type="text" placeholder="Write something"> <button type="submit" class="publisher-btn text-info" data-abc="true"><i class="fa fa-paper-plane"></i></a> </div></form>
+              
+              
+              {% endblock%}                 
+                      
+                    
+              </div>
+      </div>
+  </div>
+</div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      type="text/javascript"
+      src="{{ url_for('static', filename='index.js')}}"
+    ></script>
 
+    <script>
+      var objDiv = document.getElementById("chatbox");
+      objDiv.scrollTop = objDiv.scrollHeight;
 
-    <div class="media media-chat media-chat">
-        <div class="media-body">
-            <p>Here is my SECOND question asking for an answer</p>
-            <p class="meta"><time datetime="2018">00:06</time></p>
-        </div>    
-    </div>    
+    </script>
 
-{% endblock%}
-        
+</body>
+</html>
