--- a/website/templates/chats/thanks.html
+++ b/website/templates/chats/thanks.html
@@ -1,9 +1,58 @@
 
-{% extends "chats/create_post.html" %} {% block title %}GrapeVine - Giving Feedback made easy{% endblock %} 
+{% extends "chats/chatquestion1.html" %} {% block title %}GrapeVine - Giving Feedback made easy{% endblock %} 
 
 
 
 {% block Content%}
-<H1>THANKS FOR FILLING THIS OUT</H1>
+<div class="media media-chat media-chat-reverse">
+        <div class="media-body">
+            <p>{{answer1}}</p>
+            <p class="meta"><time datetime="2018">00:06</time></p>
+        </div>    
+    </div>
+
+
+    <div class="media media-chat media-chat">
+        <div class="media-body">
+            <p>Here is my SECOND question asking for an answer</p>
+            <p class="meta"><time datetime="2018">00:06</time></p>
+        </div>    
+    </div>  
+
+
+    <div class="media media-chat media-chat-reverse">
+        <div class="media-body">
+            <p>{{answer2}}</p>
+            <p class="meta"><time datetime="2018">00:06</time></p>
+        </div>    
+    </div>
+
+
+    <div class="media media-chat media-chat">
+        <div class="media-body">
+            <p>Here is my THIRD question asking for an answer</p>
+            <p class="meta"><time datetime="2018">00:06</time></p>
+        </div>    
+    </div> 
+
+
+    <div class="media media-chat media-chat-reverse">
+        <div class="media-body">
+            <p>{{answer3}}</p>
+            <p class="meta"><time datetime="2018">00:06</time></p>
+        </div>    
+    </div>
+
+
+    <div class="media media-chat media-chat">
+        <div class="media-body">
+            <p>That was all thank you!</p>
+            <p><div style="width:100%;height:0;padding-bottom:66%;position:relative;"><iframe src="https://giphy.com/embed/s2qXK8wAvkHTO" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/party-birthday-celebration-s2qXK8wAvkHTO"></a></p></p>
+            <p class="meta"><time datetime="2018">00:06</time></p>
+        </div>    
+    </div> 
+
+    <h2>Feedback made possible trough Grapevine</h2>
+
 {% endblock%}
         
