--- a/website/templates/theme.html
+++ b/website/templates/theme.html
@@ -72,7 +72,7 @@
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 text-dark rounded" href="/logout">Log Out</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 text-dark rounded" href="/dashboard/{{user.username}}">Dashboard</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 text-dark rounded" href="/settings/{{user.username}}">Settings</a></li>
-                        <a href="/createassets/{{user.username}}"class="btn btn-dark" role="button">Get Feedback now!</a>
+                        <!--<a href="/createassets/{{user.username}}"class="btn btn-dark" role="button">Get Feedback now!</a>-->
                     {% else %}
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 text-dark rounded" href="/sign-up">Sign Up</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 text-dark rounded" href="/sign-in">Sign In</a></li>
