added phone number to db

--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -12,6 +12,7 @@
                 <h3 align="center">Sign Up</h3>
                 <div class="form-group">
                   <label for="email">Email Address</label>
+                  <p class="card-text"><small class="text-muted">An email address where we can reach you</small></p>
                   <input
                     type="text"
                     id="email"
@@ -20,6 +21,7 @@
                     placeholder="Enter Email"
                   />
                   <label for="username">Username</label>
+                  <p class="card-text"><small class="text-muted">This username is what we'll show your customers when you ask for feedback</small></p>
                   <input
                     type="text"
                     id="username"
@@ -27,7 +29,17 @@
                     class="form-control"
                     placeholder="Enter Username"
                   />
+                  <label for="phonenumber">Phone Number</label>
+                  <p class="card-text"><small class="text-muted">We'll need your phone number in order to send you feedback templates over whatsapp</small></p>
+                  <input
+                    type="text"
+                    id="phonenumber"
+                    name="phonenumber"
+                    class="form-control"
+                    placeholder="+31612345678"
+                  />
                   <label for="password1">Password</label>
+                  <p class="card-text"><small class="text-muted">Pick a secure password of minimum 8 characters</small></p>
                   <input
                     type="password"
                     id="password1"
