--- a/website/templates/dashboard.html
+++ b/website/templates/dashboard.html
@@ -148,8 +148,14 @@
 {% else %}
 <br><br>
 <hr>
-<h1> You have received no feedback yet</h1>
-<p>As soon as your first customers start interacting with your surveys the results will show up here.</p>
+
+<div class="alert alert-warning" role="alert">
+  <h4 class="alert-heading">Welcome to GrapeVine!</h4>
+  <p>Thank you for trying out Grapevine. We are very pleased to have you on board. From here you are only 2 minutes away of receiving your first pieces of feedback.</p>
+  <hr>
+  <p class="mb-0">Currently you have not received any feedback, yet. But, as soon as your first customers start interacting with your surveys the results will show up here.</p>
+</div>
+
 
 {% endif%}
 
@@ -274,42 +280,100 @@
   <div class="accordion" id="accordionPanelsStayOpenExample">
     <div class="accordion-item">
       <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-          Accordion Item #1
+        <button class="accordion-button bg-primary" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+          Step 1: Configure your custom questions
         </button>
       </h2>
       <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
         <div class="accordion-body">
-          <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          <p>Custom questions allow you to ask your clients for something specific. It helps you ask them: <br>"How did you like your <strong>Pizza</strong>", <br>Instead of just: "How did you like it" </p>
+          <p>Grapevine supports 3 custom questions out of the box, where the first question is the main question. Then youhave the ability to add 2 more follow up questions into the mix to ask them for something specific, like what kind of pizza they ordered. </p>
+          <button type="button" class="btn btn-primary text-dark">Set up custom questions</button>
         </div>
       </div>
     </div>
     <div class="accordion-item">
       <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-          Accordion Item #2
+          Step 2: Share your surveys online, through Whatsapp or Email
         </button>
       </h2>
       <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
         <div class="accordion-body">
-          <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          <p>Grapevine allows you to easily connect with your customers. We provide text templates that you can share with your customers. You can send yourself a template on Whatsapp or through email.</p>
+          <p>After receiving the template you can easily forward it to a customer you'd like to get some feedback from!</p>
+
+            <button type="button" class="btn btn-primary text-dark" data-bs-toggle="offcanvas" data-bs-target="#offcanvasEmail" aria-controls="offcanvasEmail">Email</button>
+            <button type="button" class="btn btn-primary text-dark" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWhatsapp" aria-controls="offcanvasWhatsapp">Whatsapp</button>
         </div>
       </div>
     </div>
     <div class="accordion-item">
       <h2 class="accordion-header" id="panelsStayOpen-headingThree">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-          Accordion Item #3
+          Step 3: Share your QR codes in the real world
         </button>
       </h2>
       <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
         <div class="accordion-body">
-          <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          <p>The Grapevine QR codes allow you to ask for feedback in the real world. Your customers can scan the QR codes with their phone and let you know if they liked your service in a matter of seconds </p>
+          <p>You can print our read-made template to get started right away, or download your unique QR codes to use in your own designs</p>
+
+
+          <h5>Scan a QR code to get your first piece of feedback!</h5>
+          <div class="card bg-primary" style="width: 500px;">
+            <div class="row no-gutters">
+                <div class="col-sm-5">
+                  <img class="card-img-top bg-secondary" src="{{ url_for('static',filename='qrcodes/User_')}}{{urlPromotorQR}}"  alt="Card image cap">
+                </div>
+                <div class="col-sm-7">
+                    <div class="card-body">
+                        <h5 class="card-title">This QR Code generates a bit of positive feedback</h5>
+                       
+                        
+                    </div>
+                </div>
+            </div>
+          </div>
+
+          <div class="card bg-secondary" style="width: 500px;">
+            <div class="row no-gutters">
+                <div class="col-sm-5">
+                  <img class="card-img-top bg-secondary" src="{{ url_for('static',filename='qrcodes/User_')}}{{urlNeutralQR}}"  alt="Card image cap">
+                </div>
+                <div class="col-sm-7">
+                    <div class="card-body">
+                        <h5 class="card-title">This QR Code generates a bit of neutral feedback</h5>
+                       
+                        
+                    </div>
+                </div>
+            </div>
+          </div>
+
+          <div class="card bg-third" style="width: 500px;">
+            <div class="row no-gutters">
+                <div class="col-sm-5">
+                  <img class="card-img-top bg-secondary" src="{{ url_for('static',filename='qrcodes/User_')}}{{urlDetractorQR}}"  alt="Card image cap">
+                </div>
+                <div class="col-sm-7">
+                    <div class="card-body">
+                        <h5 class="card-title">This QR Code generates a bit of negative feedback</h5>
+                       
+                        
+                    </div>
+                </div>
+            </div>
+          </div>
+
+
+          
         </div>
       </div>
     </div>
   </div>
   {% endif %}   
+  <!-- end of the getting started accordion-->
 
 </div>
 </div>
@@ -395,6 +459,7 @@
     </code></pre>
   </div>
 </div>
+<!-- Here end the 2 offcanvas items -->
 
 
 
