adding clarity to analytics

--- a/website/templates/chats/chatquestion1.html
+++ b/website/templates/chats/chatquestion1.html
@@ -16,6 +16,13 @@
       crossorigin="anonymous"
     ></script>
     <title>{% block title %}Chat with {{user}}{% endblock %}</title>
+    <script type="text/javascript">
+      (function(c,l,a,r,i,t,y){
+          c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+          t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+          y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+      })(window, document, "clarity", "script", "b80qerc4w0");
+  </script>
         <!-- Matomo -->
     <script>
       var _paq = window._paq = window._paq || [];
