--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -38,7 +38,29 @@
          <!-- Core theme CSS (includes Bootstrap)-->
          <link href="{{ url_for('static',filename='styles/newstyles.css') }}" rel="stylesheet" />
          <link href="{{ url_for('static',filename='styles/styles.css') }}" rel="stylesheet" />
-         
+         <script type="text/javascript">
+            (function(c,l,a,r,i,t,y){
+                c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+                t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+                y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+            })(window, document, "clarity", "script", "b80qerc4w0");
+        </script>
+                <!-- Matomo -->
+        <script>
+            var _paq = window._paq = window._paq || [];
+            /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+            _paq.push(["setExcludedQueryParams", ["?targeturl.com","targeturl.com"]]);
+            _paq.push(['trackPageView']);
+            _paq.push(['enableLinkTracking']);
+            (function() {
+            var u="//petervandoorn.com/matomo/";
+            _paq.push(['setTrackerUrl', u+'matomo.php']);
+            _paq.push(['setSiteId', '6']);
+            var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+            g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
+            })();
+        </script>
+        <!-- End Matomo Code -->
          
      </head>
      <!-- This SCRIPT  manages fading out of the alert after 2 secods-->  
